--- a/config/database.yml
+++ b/config/database.yml
@@ -34,9 +34,9 @@ production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: laboralmedical_production
+  database: labmedicaldb
   pool: 5
-  username: laboralmedicaldb
+  username: labmedicaldb
   password: chimpance99
   socket: /tmp/mysql.sock
-  host: mysql.db.laboralmedicalperu.net
+  host: labmedicaldb.avance.kosmyka.com
